Fix z-index in footer section

--- a/src/components/aboutUs/assets/css/about_us.css
+++ b/src/components/aboutUs/assets/css/about_us.css
@@ -7,7 +7,7 @@
   position: relative;
   background: #f8f9ff;
   padding-bottom: 10em;
-  z-index: -10;
+  z-index: 0;
 }
 
 .about-us-title {
