--- a/src/components/navbar/assets/css/navbar.css
+++ b/src/components/navbar/assets/css/navbar.css
@@ -52,7 +52,7 @@
 
 #navbar {
   transition: all 0.5s linear;
-  z-index: 1;
+  z-index: 100;
   font-family: 'ArvoRegular';
   font-size: 21px;
 }
